Added all positions endpoint